--- a/objFile.html
+++ b/objFile.html
@@ -52,7 +52,7 @@
    <canvas id="HeightMapButuceniOffscreen" width="400" height = "300">
       <script  type="text/glsl-shader" data-gl-type="vertex-shader"   data-gl-src="./texture/height-map.vs" ></script>
       <script  type="text/glsl-shader" data-gl-type="fragment-shader" data-gl-src="./texture/height-map.fs" ></script>
-      <script src="./texture/heightMapWorker.uiproxy.js"></script>
+      <script src="./texture/heightMap.uiproxy.js"></script>
 
    </canvas><!-- br/ -->
 
