--- a/heightMap.html
+++ b/heightMap.html
@@ -46,12 +46,12 @@
             FragColor = vec4( terrainColor.rgb * strength, terrainColor.a);
          }
       </script>
-	  <script src="./texture/heightMap.js"></script>
+	  <script src="./heightMap/heightMap.js"></script>
    </canvas><br/>
    <canvas id="HeightMapButuceniOffscreen" width="400" height = "300">
-      <script  type="text/glsl-shader" data-gl-type="vertex-shader"   data-gl-src="./texture/height-map.vs" ></script>
-      <script  type="text/glsl-shader" data-gl-type="fragment-shader" data-gl-src="./texture/height-map.fs" ></script>
-      <script src="./texture/heightMap.uiproxy.js"></script>
+      <script  type="text/glsl-shader" data-gl-type="vertex-shader"   data-gl-src="./heightMap/height-map.vs" ></script>
+      <script  type="text/glsl-shader" data-gl-type="fragment-shader" data-gl-src="./heightMap/height-map.fs" ></script>
+      <script src="./heightMap/heightMap.uiproxy.js"></script>
 
    </canvas><!-- br/ -->
 
@@ -63,7 +63,7 @@
    </video><br/>
         <!-- crossorigin="anonymous" -->
    base:<br/><img id="imgBasic" style="display:none"  src="./texture/f-texture.png" /><br/>
-   Tipova:<!-- br/><img id="imgTipova" src="./heightmap/tipova.png" /><br/ -->
+   Tipova:<!-- br/><img id="imgTipova" src="./heightMap/tipova.png" /><br/ -->
    <a href="https://webglfundamentals.org/webgl/lessons/webgl-3d-textures.html">texture 1, manual</a>
    <!--
    for most samples webgl-utils only provides shader compiling/linking and
