--- a/objFile.html
+++ b/objFile.html
@@ -11,6 +11,54 @@
    <script src="./gljs/glcanvas.js"></script>
    <script src="./gljs/glcontroller.js"></script>
 
+   <div class="sample">
+      Simple draw indexed:<br/>
+      <canvas id = "simpleDrawIndexed"  width = "400" height = "300" class="blue">
+         <script src="./objFile/simpleDrawIndexed.js"></script>
+         <script type="text/glsl-shader" data-gl-type="vertex-shader">
+            #version 300 es
+            layout (location = 0) in  vec2 coordinates;
+            void main(void)
+            {
+               gl_Position = vec4(coordinates, 0.0, 1.0);
+            }
+         </script>
+         <script type="text/glsl-shader" data-gl-type="fragment-shader">
+            #version 300 es
+            precision mediump float;
+            out vec4 fragColor;
+            void main(void)
+            {
+               fragColor = vec4(1.0, 0.0, 1.0, 0.5);
+            }
+         </script>
+      </canvas>
+   </div>
+   <div>
+      <canvas id="UShowTexture" width="400" height = "300">
+         <script  type="text/glsl-shader"   data-gl-type="vertex-shader">
+            attribute vec4 a_position; //a_texcoord
+            attribute vec2 a_texcoord;
+            varying vec2 v_texcoord;
+            layout (location = 0) in  vec2 coordinates;
+            void main(void)
+            {
+               gl_Position = vec4(coordinates, 0.0, 1.0);
+               v_texcoord  = a_texcoord;
+            }
+         </script>
+         <script  type="text/glsl-shader" data-gl-type="fragment-shader">
+            precision mediump float;
+            varying vec2 v_texcoord; // Passed in from the vertex shader.
+            uniform sampler2D u_texture; // The texture.
+            void main()
+            {
+               gl_FragColor = texture2D(u_texture, v_texcoord);
+            }
+         </script>
+      </canvas>
+   </div><br/>
+
    <canvas id="HeightMapButuceni" width="400" height = "300">
       <script  type="text/glsl-shader"   data-gl-type="vertex-shader">
          #version 300 es
@@ -50,9 +98,9 @@
 	  <script src="./texture/using3DObjFile.js"></script>
    </canvas><br/>
    <canvas id="HeightMapButuceniOffscreen" width="400" height = "300">
-      <script  type="text/glsl-shader" data-gl-type="vertex-shader"   data-gl-src="./texture/height-map.vs" ></script>
-      <script  type="text/glsl-shader" data-gl-type="fragment-shader" data-gl-src="./texture/height-map.fs" ></script>
-      <script src="./texture/heightMap.uiproxy.js"></script>
+      <script  type="text/glsl-shader" data-gl-type="vertex-shader"   data-gl-src="./heightMap/height-map.vs" ></script>
+      <script  type="text/glsl-shader" data-gl-type="fragment-shader" data-gl-src="./heightMap/height-map.fs" ></script>
+      <!-- script src="./texture/heightMap.uiproxy.js"></script -->
 
    </canvas><!-- br/ -->
 
@@ -64,7 +112,7 @@
    </video><br/>
         <!-- crossorigin="anonymous" -->
    base:<br/><img id="imgBasic" style="display:none"  src="./texture/f-texture.png" /><br/>
-   Tipova:<!-- br/><img id="imgTipova" src="./heightmap/tipova.png" /><br/ -->
+   Tipova:<!-- br/><img id="imgTipova" src="./heightMap/tipova.png" /><br/ -->
    <a href="https://webglfundamentals.org/webgl/lessons/webgl-3d-textures.html">texture 1, manual</a>
    <!--
    for most samples webgl-utils only provides shader compiling/linking and
