--- a/renderToTexture.html
+++ b/renderToTexture.html
@@ -90,8 +90,8 @@
 	  <script src="./texture/renderToTexture.js"></script>
    </canvas><br/>
    <canvas id="HeightMapButuceniOffscreen" width="400" height = "300">
-      <script  type="text/glsl-shader" data-gl-type="vertex-shader"   data-gl-src="./texture/height-map.vs" ></script>
-      <script  type="text/glsl-shader" data-gl-type="fragment-shader" data-gl-src="./texture/height-map.fs" ></script>
+      <script  type="text/glsl-shader" data-gl-type="vertex-shader"   data-gl-src="./heightMap/height-map.vs" ></script>
+      <script  type="text/glsl-shader" data-gl-type="fragment-shader" data-gl-src="./heightMap/height-map.fs" ></script>
       <script src="./texture/renderToTexture.uiproxy.js"></script>
 
    </canvas><!-- br/ -->
@@ -104,7 +104,7 @@
    </video><br/>
         <!-- crossorigin="anonymous" -->
    base:<br/><img id="imgBasic" style="display:none"  src="./texture/f-texture.png" /><br/>
-   Tipova:<!-- br/><img id="imgTipova" src="./heightmap/tipova.png" /><br/ -->
+   Tipova:<!-- br/><img id="imgTipova" src="./heightMap/tipova.png" /><br/ -->
    <a href="./tutorials.html">Tutorials</a>
 </body>
 </html>
