--- a/textureManual1.html
+++ b/textureManual1.html
@@ -32,7 +32,7 @@
    </video><br/>
         <!-- crossorigin="anonymous" -->
    base:<br/><img id="imgBasic" style="display:none"  src="./texture/f-texture.png" /><br/>
-   Tipova:<!-- br/><img id="imgTipova" src="./heightmap/tipova.png" /><br/ -->
+   Tipova:<!-- br/><img id="imgTipova" src="./heightMap/tipova.png" /><br/ -->
    <a href="https://webglfundamentals.org/webgl/lessons/webgl-3d-textures.html">texture 1, manual</a>
    <!--
    for most samples webgl-utils only provides shader compiling/linking and
