--- a/textureVideo.html
+++ b/textureVideo.html
@@ -37,7 +37,7 @@
                fragColor = texture (u_texture, v_texcoord);
             }
          </script>
-         <script src="./textureManual1a/textureManual1.js"></script>
+         <script src="./textureVideo/textureBigF.js"></script>
       </canvas>
    </div>
    <div class="sample">
@@ -65,7 +65,7 @@
                fragColor = texture (u_texture, v_texcoord);
             }
          </script>
-         <script src="./textureManual1a/simpleDrawIndexed.js"></script>
+         <script src="./textureVideo/textureSimpleBigFIndexed.js"></script>
       </canvas>
    </div><br/>
    <div class="sample">
@@ -93,16 +93,16 @@
                fragColor = texture (u_texture, v_texcoord);
             }
          </script>
-         <script src="./textureManual1a/simpleVideoDrawIndexed.js"></script>
+         <script src="./textureVideo/textureVideoIndexed.js"></script>
       </canvas>
    </div>
    <div class="sample">
-      This is mozilla sample<br/>
+      Mozilla Cube3D video sample<br/>
       <canvas id="simpleVideoSample" width="200" height = "150">
       <script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js"
               integrity="sha512-zhHQR0/H5SEBL3Wn6yYSaTTZej12z0h`VZKOv3TwCUXT1z5qeqGcXJLLrbERYRScEDDpYIJhPC1fk31gqR783iQ=="
               crossorigin="anonymous" defer=""></script>
-         <script src="./textureManual1a/simpleVideoSample.js"  type="module"></script>
+         <script src="./textureVideo/mozillaCube3DTextureVideoDrawIndexed.js"  type="module"></script>
       </canvas>
    </div><br/>
  
