--- a/textureVideo.html
+++ b/textureVideo.html
@@ -99,9 +99,10 @@
    <div class="sample">
       Mozilla Cube3D video sample<br/>
       <canvas id="simpleVideoSample" width="200" height = "150">
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js"
+         <!-- script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js"
               integrity="sha512-zhHQR0/H5SEBL3Wn6yYSaTTZej12z0h`VZKOv3TwCUXT1z5qeqGcXJLLrbERYRScEDDpYIJhPC1fk31gqR783iQ=="
-              crossorigin="anonymous" defer=""></script>
+              crossorigin="anonymous" defer=""></script -->
+	     <script src="./3rdparty/cdnjs.cloudflare.com_ajax_libs_gl-matrix_2.8.1_gl-matrix-min.js"></script>
          <script src="./textureVideo/mozillaCube3DTextureVideoDrawIndexed.js"  type="module"></script>
       </canvas>
    </div><br/>
