Set texture to new async/ready architecture

--- a/textureVideo.html
+++ b/textureVideo.html
@@ -102,6 +102,8 @@
          <!-- script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js"
               integrity="sha512-zhHQR0/H5SEBL3Wn6yYSaTTZej12z0h`VZKOv3TwCUXT1z5qeqGcXJLLrbERYRScEDDpYIJhPC1fk31gqR783iQ=="
               crossorigin="anonymous" defer=""></script -->
+         <!-- copied from https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix.js copyright included -->
+         <!-- copied from https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js copyright included -->
 	     <script src="./3rdparty/cdnjs.cloudflare.com_ajax_libs_gl-matrix_2.8.1_gl-matrix-min.js"></script>
          <script src="./textureVideo/mozillaCube3DTextureVideoDrawIndexed.js"  type="module"></script>
       </canvas>
