--- a/samples/WebGPU triangle.html
+++ b/samples/WebGPU triangle.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <!-- saved from url=(0054)https://mdn.github.io/dom-examples/webgpu-render-demo/ -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
-    <title>WebGPU triangle</title>
-    <script src="./WebGPU triangle_files/script.js.download" defer=""></script>
-  </head>
-  <body>
-    <h1>WebGPU triangle</h1>
-    <canvas id="gpuCanvas" width="800" height="600"></canvas>
-    <script>
-       document.addEventListener("wheel", (event) =>
-       {
-          if (event.ctrlKey)
-             event.preventDefault();
-       });
-   <script>
-  
-</body></html>
+<html lang="en">
+<head>
+   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">	
+   <title>WebGPU triangle</title>
+</head>
+<body>
+   <h1>WebGPU triangle</h1>
+   <canvas id="gpuCanvas" width="800" height="600">
+     <script src="./WebGPU triangle_files/script.js.download" defer=""></script>
+     <script>
+        document.addEventListener("wheel", (event) =>
+        {
+           if (event.ctrlKey)
+              event.preventDefault();
+        });
+     </script>
+	</canvas>
+
+</body>
+</html>
