--- a/renderToTexture.html
+++ b/renderToTexture.html
@@ -117,12 +117,12 @@
 	     <script src="./renderToTexture/renderToTexture.js"></script>
       </canvas>
    </div><br/>
-   <!-- canvas id="HeightMapButuceniOffscreen" width="400" height = "300">
+   <canvas id="HeightMapButuceniOffscreen" width="400" height = "300">
       <script  type="text/glsl-shader" data-gl-type="vertex-shader"   data-gl-src="./heightMap/height-map.vs" ></script>
       <script  type="text/glsl-shader" data-gl-type="fragment-shader" data-gl-src="./heightMap/height-map.fs" ></script>
       <script src="./renderToTexture/renderToTexture.uiproxy.js"></script>
 
-   </canvas --><!-- br/ -->
+   </canvas><!-- br/ -->
 
    <br/>
    <!-- video id="video"  height="90" width="160" src="./video/flower.mp4" autoplay muted loop  > </video>
