--- a/webgpu1.html
+++ b/webgpu1.html
@@ -2,11 +2,57 @@
 <head>
    <title>webgl test</title>
    <link rel="stylesheet" href="./css/default.css">
-   <script src="./gljs/gpucanvas.js"></script>
+   <script src="./gljs/glcanvas.js"></script>
+   <script src="./gpujs/gpucanvas.js"></script>
    <script src="./gljs/glmath.js"></script>
+   <script src="./experiment/experiment.js"></script>
       
 </head>
 <body>
+   <div class="sample">
+      WebGPU triangle:<br/>
+      <canvas id="gpuCanvas" width="160" height="120">
+        <script src="./webgpu1/webgpu1.js" defer=""></script>
+        <script>
+           document.addEventListener("wheel", (event) =>
+           {
+              if (event.ctrlKey)
+                 event.preventDefault();
+           });
+        </script>
+	   </canvas>
+	</div>
+   <div class="sample">
+      WebGPU triangle:<br/>
+      <canvas id="gpuCanvas" width="160" height="120">
+        <script src="./webgpu1/webgpu2.js" defer=""></script>
+        <script type="text/webgpu-shader" data-gl-type="webgpu-shader">
+		     struct VertexOut
+           {
+              @builtin(position) position : vec4f,
+              @location(0) color : vec4f
+           }
+
+           @vertex
+           fn vertex_main(@location(0) position: vec4f, @location(1) color: vec4f) -> VertexOut
+           {
+              var output : VertexOut;
+              output.position = position;
+              output.color = color;
+              return output;
+           }
+
+           @fragment
+           fn fragment_main(fragData: VertexOut) -> @location(0) vec4f
+           {
+              return fragData.color;
+           }
+        </script>
+
+	   </canvas>
+	</div>
+	hello
+
    <canvas id = "mycanvas2"  width =  "40" height =  "40" class = "green"><script src="./webgpu1/simple.js"></script></canvas><br/>
 
    <div class="sample">
