--- a/cone.heart.4.html
+++ b/cone.heart.4.html
@@ -12,7 +12,7 @@
       Cone TRIANGLES (grad), one program, one conditional<br />
       Geometry<br/>
       <canvas id = "cone1 heart geometry" width = "400" height = "400"  class="yellow">
-         <script src="./webgl4/cone1_heart_geometry3.js"></script>
+         <script src="./cone.heart.4/cone1_heart_geometry3.js"></script>
          <script  type="text/glsl-shader" data-gl-type="vertex-shader">
              attribute vec4 coordinates;
              attribute vec3 inputNormal;
@@ -47,7 +47,7 @@
       Cone TRIANGLES (grad), two programs, no conditional<br />
       Geometry 2<br/>
       <canvas id = "cone1 heart geometry 2" width = "400" height = "400"  class="yellow">
-         <script src="./webgl4/cone1_heart_geometry3a.js"></script>
+         <script src="./cone.heart.4/cone1_heart_geometry3a.js"></script>
          <!--   Program default  -->
          <script  type="text/glsl-shader" data-gl-type="vertex-shader">
              attribute vec3 coordinates;
