--- a/draw.simple.1.html
+++ b/draw.simple.1.html
@@ -10,7 +10,7 @@
    <div class="sample">
       Simple draw:<br/>
       <canvas id = "simpleDraw"  width = "120" height = "120" class="blue">
-         <script src="./webgl1/simpleDraw.js"></script>
+         <script src="./draw.simple.1/simpleDraw.js"></script>
          <script type="text/glsl-shader" data-gl-type="vertex-shader">
             attribute vec2 coordinates;
             void main(void)
@@ -30,7 +30,7 @@
    <div class="sample">
       Simple draw indexed:<br/>
       <canvas id = "simpleDrawIndexed"  width = "120" height = "120" class="blue">
-         <script src="./webgl1/simpleDrawIndexed.js"></script>
+         <script src="./draw.simple.1/simpleDrawIndexed.js"></script>
          <script type="text/glsl-shader" data-gl-type="vertex-shader">
             attribute vec2 coordinates;
             void main(void)
@@ -49,7 +49,7 @@
    <div class="sample">
       Translate:<br/>
       <canvas id = "translate"  width = "120" height = "120" class="yellow" >
-         <script src="./webgl1/translate.js"></script>
+         <script src="./draw.simple.1/translate.js"></script>
          <script type="text/glsl-shader" data-gl-type="vertex-shader">
             attribute vec4 coordinates;
             void main(void)
@@ -69,7 +69,7 @@
    <div class="sample">
       Translate animate 1:<br/>
       <canvas id = "animate"  width = "360" height = "360" class="cyan">
-         <script src="./webgl1/animate.js"></script>
+         <script src="./draw.simple.1/animate.js"></script>
          <script type="text/glsl-shader" data-gl-type="vertex-shader">
              attribute vec4 coordinates;
              uniform   vec4 translation;
@@ -89,7 +89,7 @@
    <div class="sample">
       Translate animate 2:<br/>
       <canvas id = "animate second instance" width = "360" height = "360" class="magenta">
-          <script src="./webgl1/animate2.js"></script>
+          <script src="./draw.simple.1/animate2.js"></script>
           <script type="text/glsl-shader" data-gl-type="vertex-shader">
              attribute vec4 coordinates;
              uniform   vec3 translation;
@@ -109,7 +109,7 @@
    <div class="sample">
       Normals:<br/>
       <canvas id = "normals" width = "120" height = "120"  class="yellow">
-         <script src="./webgl1/normals.js"></script>
+         <script src="./draw.simple.1/normals.js"></script>
          <script type="text/glsl-shader" data-gl-type="vertex-shader">
             attribute vec4 coordinates;
             attribute vec3 inputNormal;
@@ -138,7 +138,7 @@
    <div class="sample">
       Colors R+G:<br/>
       <canvas id = "usecolors" width = "120" height = "120"  class="yellow">
-          <script src="./webgl1/usecolors.js"></script>
+          <script src="./draw.simple.1/usecolors.js"></script>
           <script type="text/glsl-shader" data-gl-type="vertex-shader">
             attribute vec4 coordinates;
             attribute vec4  forFragColor;
@@ -164,7 +164,7 @@
       Cone TRIANGLE_FAN<br/>
       (wrong, ab glow effect)</br>
       <canvas id = "cone" width = "200" height = "200"  class="yellow">
-         <script src="./webgl1/triangle_fan.js"></script>
+         <script src="./draw.simple.1/triangle_fan.js"></script>
          <script type="text/glsl-shader" data-gl-type="vertex-shader">
              attribute vec4 coordinates;
              attribute vec3 inputNormal;
@@ -192,7 +192,7 @@
       Tip normal set to 0,0,0<br/>
       Light change direction<br/>
       <canvas id = "cone1_animate" width = "360" height = "360"  class="yellow">
-         <script src="./webgl1/cone1_animate.js"></script>
+         <script src="./draw.simple.1/cone1_animate.js"></script>
          <script type="text/glsl-shader" data-gl-type="vertex-shader">
              attribute vec4 coordinates;
              attribute vec3 inputNormal;
@@ -229,7 +229,7 @@
       Tip normal set to one side normal.<br/>
       Light change direction<br/>
       <canvas id = "cone1_animate" width = "360" height = "360"  class="yellow">
-         <script src="./webgl1/cone1_animate2.js"></script>
+         <script src="./draw.simple.1/cone1_animate2.js"></script>
          <script type="text/glsl-shader" data-gl-type="vertex-shader">
              attribute vec4 coordinates;
              attribute vec3 inputNormal;
@@ -264,7 +264,7 @@
       Smooth, </br>
       Normals borow previous <br/>
       <canvas id = "cone1" width = "200" height = "200"  class="yellow">
-         <script src="./webgl1/cone1_geometry1.js"></script>
+         <script src="./draw.simple.1/cone1_geometry1.js"></script>
          <script type="text/glsl-shader" data-gl-type="vertex-shader">
              attribute vec4 coordinates;
              attribute vec3 inputNormal;
@@ -295,7 +295,7 @@
       Cone 1 geometry 2, </br>
       Geometry <br/>
       <canvas id = "cone1_geometry" width = "200" height = "200"  class="yellow">
-         <script src="./webgl1/cone1_geometry2.js"></script>
+         <script src="./draw.simple.1/cone1_geometry2.js"></script>
          <script type="text/glsl-shader" data-gl-type="vertex-shader">
              attribute vec4 coordinates;
              attribute vec3 inputNormal;
@@ -327,7 +327,7 @@
       Cone 1 geometry 3, </br>
       Geometry <br/>
       <canvas id = "cone1_geometry" width = "200" height = "200"  class="yellow">
-         <script src="./webgl1/cone1_geometry3.js"></script>
+         <script src="./draw.simple.1/cone1_geometry3.js"></script>
          <script type="text/glsl-shader" data-gl-type="vertex-shader">
              attribute vec4 coordinates;
              attribute vec3 inputNormal;
@@ -359,7 +359,7 @@
       Cone TRIANGLES (cross), </br>
       Geometry <br/>
       <canvas id = "cone1 heart geometry" width = "200" height = "200"  class="yellow">
-         <script src="./webgl1/cone1_heart_geometry.js"></script>
+         <script src="./draw.simple.1/cone1_heart_geometry.js"></script>
          <script type="text/glsl-shader" data-gl-type="vertex-shader">
              attribute vec4 coordinates;
              attribute vec3 inputNormal;
@@ -390,7 +390,7 @@
       Cone TRIANGLES (grad), </br>
       Geometry <br/>
       <canvas id = "cone1 heart geometry" width = "400" height = "400"  class="yellow">
-         <script src="./webgl1/cone1_heart_geometry2.js"></script>
+         <script src="./draw.simple.1/cone1_heart_geometry2.js"></script>
          <script type="text/glsl-shader" data-gl-type="vertex-shader">
              attribute vec4 coordinates;
              attribute vec3 inputNormal;
@@ -415,8 +415,8 @@
       </canvas>
    </div>
    <br/>
-   <canvas id = "mycanvas1"  width = "310" height =  "40" class = "red"  ><script src="./webgl1/2d.js"    ></script></canvas>
-   <canvas id = "mycanvas2"  width =  "40" height =  "40" class = "green"><script src="./webgl1/simple.js"></script></canvas><br/>
+   <canvas id = "mycanvas1"  width = "310" height =  "40" class = "red"  ><script src="./draw.simple.1/2d.js"    ></script></canvas>
+   <canvas id = "mycanvas2"  width =  "40" height =  "40" class = "green"><script src="./draw.simple.1/simple.js"></script></canvas><br/>
    <a href="./tutorials.html">Tutorials</a>
 
 
