--- a/draw.simple.1.glsl300.vao.html
+++ b/draw.simple.1.glsl300.vao.html
@@ -10,7 +10,7 @@
    <div class="sample">
       Simple draw:<br/>
       <canvas id = "draw0"  width = "120" height = "120" class="blue">
-         <script src="./webgl1v300a/draw0.js"></script>
+         <script src="./draw.simple.1.glsl300.vao/draw0.js"></script>
          <script  type="text/glsl-shader" data-gl-type="vertex-shader">
             #version 300 es
             in vec2 coordinates; //layout (location = 10) in vec2 coordinates
@@ -34,7 +34,7 @@
    <div class="sample">
       Simple draw:<br/>
       <canvas id = "draw"  width = "120" height = "120" class="blue">
-         <script src="./webgl1v300a/draw.js"></script>
+         <script src="./draw.simple.1.glsl300.vao/draw.js"></script>
          <script  type="text/glsl-shader" data-gl-type="vertex-shader">
             #version 300 es
             in vec2 coordinates; //layout (location = 10) in vec2 coordinates
@@ -58,7 +58,7 @@
    <div class="sample">
       Translate:<br/>
       <canvas id = "translate"  width = "120" height = "120" class="yellow" >
-         <script src="./webgl1v300a/translate.js"></script>
+         <script src="./draw.simple.1.glsl300.vao/translate.js"></script>
          <script  type="text/glsl-shader" data-gl-type="vertex-shader">
             #version 300 es
             in vec4 coordinates;
@@ -81,7 +81,7 @@
    <div class="sample">
       Translate animate 1:<br/>
       <canvas id = "animate"  width = "120" height = "120" class="cyan">
-         <script src="./webgl1v300a/animate.js"></script>
+         <script src="./draw.simple.1.glsl300.vao/animate.js"></script>
          <script  type="text/glsl-shader" data-gl-type="vertex-shader">
             #version 300 es
             in vec4 coordinates;
@@ -105,7 +105,7 @@
    <div class="sample">
       Translate animate 2:<br/>
       <canvas id = "animate second instance" width = "120" height = "120" class="magenta">
-          <script src="./webgl1v300a/animate2.js"></script>
+          <script src="./draw.simple.1.glsl300.vao/animate2.js"></script>
           <script  type="text/glsl-shader" data-gl-type="vertex-shader">
             #version 300 es
             in vec4 coordinates;
@@ -129,7 +129,7 @@
    <div class="sample">
       Normals:<br/>
       <canvas id = "normals" width = "120" height = "120"  class="yellow">
-         <script src="./webgl1v300a/normals.js"></script>
+         <script src="./draw.simple.1.glsl300.vao/normals.js"></script>
          <script  type="text/glsl-shader" data-gl-type="vertex-shader">
             #version 300 es
             in vec4 coordinates;
@@ -162,7 +162,7 @@
    <div class="sample">
       Colors R+G:<br/>
       <canvas id = "usecolors" width = "120" height = "120"  class="yellow">
-          <script src="./webgl1v300a/usecolors.js"></script>
+          <script src="./draw.simple.1.glsl300.vao/usecolors.js"></script>
           <script  type="text/glsl-shader" data-gl-type="vertex-shader">
             #version 300 es
             in vec4 coordinates;
@@ -192,7 +192,7 @@
       Cone TRIANGLE_FAN<br/>
       (wrong)</br>
       <canvas id = "cone" width = "200" height = "200"  class="yellow">
-         <script src="./webgl1v300a/triangle_fan.js"></script>
+         <script src="./draw.simple.1.glsl300.vao/triangle_fan.js"></script>
          <script  type="text/glsl-shader" data-gl-type="vertex-shader">
             #version 300 es
             in vec4 coordinates;
@@ -224,7 +224,7 @@
       Tip normal set to 0,0,0<br/>
       Light change direction<br/>
       <canvas id = "cone1_animate" width = "200" height = "200"  class="yellow">
-         <script src="./webgl1v300a/cone1_animate.js"></script>
+         <script src="./draw.simple.1.glsl300.vao/cone1_animate.js"></script>
          <script  type="text/glsl-shader" data-gl-type="vertex-shader">
             #version 300 es
             in vec4 coordinates;
@@ -266,7 +266,7 @@
       Tip normal set to one side normal.<br/>
       Light change direction<br/>
       <canvas id = "cone1_animate" width = "200" height = "200"  class="yellow">
-         <script src="./webgl1v300a/cone1_animate2.js"></script>
+         <script src="./draw.simple.1.glsl300.vao/cone1_animate2.js"></script>
          <script  type="text/glsl-shader" data-gl-type="vertex-shader">
             #version 300 es
             in vec4 coordinates;
@@ -304,7 +304,7 @@
       Cone TRIANGLES (correct), </br>
       Normals simple <br/>
       <canvas id = "cone1" width = "200" height = "200"  class="yellow">
-         <script src="./webgl1v300a/cone1.js"></script>
+         <script src="./draw.simple.1.glsl300.vao/cone1.js"></script>
          <script  type="text/glsl-shader" data-gl-type="vertex-shader">
             #version 300 es
             in vec4 coordinates;
@@ -339,7 +339,7 @@
       Cone TRIANGLES (correct), </br>
       Geometry <br/>
       <canvas id = "cone1_geometry" width = "200" height = "200"  class="yellow">
-         <script src="./webgl1v300a/cone1_geometry.js"></script>
+         <script src="./draw.simple.1.glsl300.vao/cone1_geometry.js"></script>
          <script  type="text/glsl-shader" data-gl-type="vertex-shader">
             #version 300 es
             in vec4 coordinates;
@@ -375,7 +375,7 @@
       Cone TRIANGLES (cross), </br>
       Geometry <br/>
       <canvas id = "cone1 heart geometry" width = "200" height = "200"  class="yellow">
-         <script src="./webgl1v300a/cone1_heart_geometry.js"></script>
+         <script src="./draw.simple.1.glsl300.vao/cone1_heart_geometry.js"></script>
          <script  type="text/glsl-shader" data-gl-type="vertex-shader">
             #version 300 es
             in vec4 coordinates;
@@ -410,7 +410,7 @@
       Cone TRIANGLES (grad), </br>
       Geometry <br/>
       <canvas id = "cone1 heart geometry" width = "400" height = "400"  class="yellow">
-         <script src="./webgl1v300a/cone1_heart_geometry2.js"></script>
+         <script src="./draw.simple.1.glsl300.vao/cone1_heart_geometry2.js"></script>
          <script  type="text/glsl-shader" data-gl-type="vertex-shader">
             #version 300 es
             in vec4 coordinates;
@@ -444,7 +444,7 @@
       Cone TRIANGLES (grad), asynchronous, delayed by 10 seconds</br>
       Geometry <br/>
       <canvas id = "cone1 heart geometry" width = "400" height = "400"  class="yellow">
-         <script src="./webgl1v300a/cone1_heart_geometry2async.js"></script>
+         <script src="./draw.simple.1.glsl300.vao/cone1_heart_geometry2async.js"></script>
          <script  type="text/glsl-shader" data-gl-type="vertex-shader">
             #version 300 es
             in vec4 coordinates;
@@ -474,8 +474,8 @@
       </canvas>
    </div>
    <br/>
-   <canvas id = "mycanvas1"  width = "310" height =  "40" class = "red"  ><script src="./webgl1v300a/2d.js"    ></script></canvas>
-   <canvas id = "mycanvas2"  width =  "40" height =  "40" class = "green"><script src="./webgl1v300a/simple.js"></script></canvas><br/>
+   <canvas id = "mycanvas1"  width = "310" height =  "40" class = "red"  ><script src="./draw.simple.1.glsl300.vao/2d.js"    ></script></canvas>
+   <canvas id = "mycanvas2"  width =  "40" height =  "40" class = "green"><script src="./draw.simple.1.glsl300.vao/simple.js"></script></canvas><br/>
    <a href="./tutorials.html">Tutorials</a>
 
 
