--- a/heart.cone.2.html
+++ b/heart.cone.2.html
@@ -12,7 +12,7 @@
       Cone TRIANGLES (grad), <br />
       Geometry <br/>
       <canvas id = "cone1 heart geometry" width = "400" height = "400"  class="yellow">
-         <script src="./webgl2/cone1_heart_geometry3.js"></script>
+         <script src="./heart.cone.2/cone1_heart_geometry3.js"></script>
          <script  type="text/glsl-shader" data-gl-type="vertex-shader">
              attribute vec4 coordinates;
              attribute vec3 inputNormal;
